test_data/neg/ss/655285/Windows/655285.acc_simp.rtf
>655285
MQYAIAGWPVAGCPSESLLERITRKLRDGWKRLIDILNQPGVPKNGSNTYGYPD
EEEEBBEBEBBEBEEEEMBEEBMEMBMEBBEMBBEBBEMEEMEEEEEEEEEEEE
